--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Prueba WEJYC</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
